Improve patch call performance